applicationsets/demo-vm/kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-route
spec:
  port:
    targetPort: 8080 
  to:
    kind: Service
    name: my-service
